Adding sampling support to installer crash reporter client.

BUG=654771

Review-Url: https://codereview.chromium.org/2422103004
Cr-Commit-Position: refs/heads/master@{#427702}

Former-commit-id: 7d2b5433e0e583fc5edb40f16abc9566ade06f14